# magic-regexp

./: 404.html  README.md  index.html  magic-regexp.code-workspace  main.py  mkdocs.yml  objects.inv  pyproject.toml
api/regex_builder/: index.html
docs/api/: regex_builder.md
magic_regexp/: __init__.py  regex_builder.py
src/: builder.py
tests/: test_regex_builder.py
