[tool.poetry]
name = "magic-regexp"
version = "0.1.0"
description = ""
authors = ["Diego Queiroz <diegiwg@gmail.com>"]
readme = "README.md"
packages = [{include = "magic_regexp"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
taskipy = "^1.10.3"
isort = "^5.12.0"
blue = "^0.9.1"
ruff = "^0.0.254"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.2"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"


[tool.taskipy.tasks]
docs = "mkdocs serve"
test = "pytest -s -x --cov=magic_regexp -vv"
post_test = "coverage html"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
